--- a/app/views/application/_contact_popup.html.slim
+++ b/app/views/application/_contact_popup.html.slim
@@ -23,3 +23,9 @@
             textarea rows="5" placeholder=I18n.t("form.input_field_4")
           .btn-holder
             button.btn.dark = t("form.btn")
+
+  .confirm-container
+    .inner-text
+      p.title Ваше повідомлення успішно надіслане
+      p.subtitle Дякуюємо, найближчим часом оператор зв’яжеться з вами
+      a.btn.dark href=root_path = t("components.go_to_mainpage")
