--- a/app/views/application/_main_banner.html.slim
+++ b/app/views/application/_main_banner.html.slim
@@ -16,5 +16,6 @@
             p = t("mainpage.banner.corporate-label.full-name")
 
         p.regular = t("mainpage.banner.intro")
+        p.bold = t("mainpage.banner.slogan")
         a.btn title=I18n.t("mainpage.banner.btn_html_title") href=about_path
           = t("mainpage.banner.btn_title")
