--- a/app/assets/stylesheets/page-components/popup.sass
+++ b/app/assets/stylesheets/page-components/popup.sass
@@ -31,11 +31,13 @@
 
   .inner-holder
     position: relative
-    @media #{$small-only}
-      margin-top: 100px
-    @media #{$medium-up}
+    margin-top: 100px
+    margin-bottom: 100px
+    @media screen and (min-width: 1920px)
       top: 50%
       +translate(0,-50%)
+      margin-top: 0
+      margin-bottom: 0
 
   .confirm-container
     +fullsize
@@ -77,7 +79,6 @@
 .calculator-wrap
   position: relative
   background: $blueGrey50
-  padding: 30px
   box-shadow: 0 3px 5px 0 rgba(0,0,0,0.25)
   h2, h3
     text-transform: uppercase
@@ -85,6 +86,8 @@
     letter-spacing: 4px
     svg
       margin-left: 20px
+  .inner-padding
+    padding: 30px
   .smaller
     margin-bottom: 20px
     a
@@ -114,16 +117,27 @@
       cursor: pointer
     &:checked + label
       .radio-label
+        background: $dark
+        border: 2px solid transparent
+        .icon
+          background: $green
+        svg
+          fill: $dark
         p
           color: $green
   .radio-label
     position: relative
     border: 2px solid $blueGrey200
+    .icon
+      position: absolute
+      width: 64px
+      height: 60px
     svg
       position: absolute
       top: 0
       left: 0
       margin: 20px
+      fill: $blueGrey200
     p
       margin-left: 62px
       border-left: 2px solid $blueGrey200
@@ -141,6 +155,44 @@
   .btn
     display: block
     text-align: center
+
+  .result-container
+    position: relative
+    background: $dark
+    padding: 40px
+    .larger, .small
+      color: $green
+    .small
+      font-weight: 700
+      text-transform: uppercase
+      letter-spacing: 2px
+      cursor: pointer
+      +transition(.25s)
+      span
+        display: inline-block
+        vertical-align: middle
+        margin-right: 10px
+      svg
+        fill: $green
+        +transition(.25s)
+      &:hover
+        color: white
+        svg
+          fill: white
+    table
+      margin: 50px 0
+      td, th
+        border: 0
+        border-bottom: 1px dotted $blueGrey700
+        color: white
+        &:nth-child(odd)
+          text-align: left
+        &:nth-child(even)
+          text-align: right
+      p
+        background: $dark
+
+
 
 .details-info
   margin-top: 20px
