vecancie popup done

--- a/app/assets/stylesheets/main.sass
+++ b/app/assets/stylesheets/main.sass
@@ -737,6 +737,8 @@
         margin-top: 20px
   .green-link
     display: inline-block
+    padding: 10px
+    cursor: pointer
 
 .resh-nastyl-sidenav
   background: white
