--- a/app/assets/stylesheets/structure-parts.sass
+++ b/app/assets/stylesheets/structure-parts.sass
@@ -87,6 +87,9 @@
     border: 2px solid $dark
     @media #{$medium-up}
       margin-right: 20px
+    &:hover
+      background: $dark
+      color: $green
   &.dark
     background: $dark
     &:hover
