--- a/app/views/pages/contacts.html.slim
+++ b/app/views/pages/contacts.html.slim
@@ -33,4 +33,4 @@
       
       .btn-mobile-align
         .btn.contact-btn = t("contacts.contact_btn")
-        .green-link = t("contacts.watch_out_vacancies")
+        .green-link.vacancies-btn = t("contacts.watch_out_vacancies")
