--- a/app/assets/stylesheets/page-components/one.sass
+++ b/app/assets/stylesheets/page-components/one.sass
@@ -108,6 +108,7 @@
       font-weight: 700
       margin: 20px 0
       padding-left: 16px
+      color: $blueGrey700
       &:before
         content: ''
         display: block
