--- a/app/assets/stylesheets/page-components/popup.sass
+++ b/app/assets/stylesheets/page-components/popup.sass
@@ -34,10 +34,8 @@
     margin-top: 100px
     margin-bottom: 100px
     @media screen and (min-width: 1920px)
-      top: 50%
-      +translate(0,-50%)
-      margin-top: 0
-      margin-bottom: 0
+      margin-top: 150px
+      margin-bottom: 150px
 
   .confirm-container
     +fullsize
@@ -130,6 +128,7 @@
   .radio-label
     position: relative
     border: 2px solid $blueGrey200
+    margin-bottom: 20px
     .icon
       position: absolute
       width: 64px
@@ -197,8 +196,6 @@
       p
         background: $dark
 
-
-
 .details-info
   margin-top: 20px
   text-align: center
@@ -211,3 +208,83 @@
       color: black
       font-weight: 700
       letter-spacing: 2px
+
+.vacancie-popup
+  .vacancie-title
+    font-family: 'Segoe'
+    font-size: 48px
+    text-align: center
+    text-transform: uppercase
+    line-height: 1
+    margin-bottom: 40px
+    @media #{$small-only}
+      font-size: 24px
+  .price
+    position: relative
+    text-align: center
+    margin-bottom: 40px
+    padding-bottom: 40px
+    font-size: 18px
+    letter-spacing: 2px
+    color: $blueGrey400
+    text-transform: uppercase
+    &:after
+      content: ''
+      position: absolute
+      width: 60px
+      height: 1px
+      background: $green
+      bottom: 0
+      +x-align
+  .article-content
+    margin-bottom: 80px
+    h2, h3, h4, h5, h6
+      margin: 70px 0 30px
+  ul
+    padding-left: 18px
+    li
+      font-weight: normal
+      &:before
+        width: 4px
+        height: 4px
+        border-radius: 50%
+  .btn-holder
+    .attach-file
+      position: relative
+      width: 100%
+      @media #{$medium-up}
+        display: inline-block
+        width: calc(100% - 200px)
+      .attach-file-btn
+        width: 100%
+        border: 2px dashed $blueGrey200
+        text-align: center
+        &.hidden
+          display: none
+      .added-file-field
+        color: $green
+        text-align: left
+        padding-right: 40px
+      .remove-file
+        width: 30px
+        height: 30px
+        position: absolute
+        right: 0
+        top: 0
+        display: none
+        cursor: pointer
+        svg
+          width: 100%
+          height: 100%
+          fill: $green
+          +transition(.25s)
+        &:hover
+          svg
+            fill: $dark
+        &.visible
+          display: block
+    .btn.dark
+      width: 100%
+      @media #{$medium-up}
+        width: 180px
+        margin-left: 20px
