--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -11,6 +11,7 @@ html
 
     = render "contact_popup"
     = render "calculate_popup"
+    = render "vacancie_popup"
 
     .main-wrapper
       = yield
