--- a/app/assets/stylesheets/page-components/one.sass
+++ b/app/assets/stylesheets/page-components/one.sass
@@ -107,8 +107,9 @@
       position: relative
       font-weight: 700
       margin: 20px 0
-      padding-left: 16px
       color: $blueGrey700
+      @media #{$medium-up}
+        padding-left: 16px
       &:before
         content: ''
         display: block
