--- a/app/assets/stylesheets/page-components/popup.sass
+++ b/app/assets/stylesheets/page-components/popup.sass
@@ -259,6 +259,10 @@
         width: 100%
         border: 2px dashed $blueGrey200
         text-align: center
+        svg
+          width: 14px
+          height: 14px
+          fill: $green
         &.hidden
           display: none
       .added-file-field
