--- a/app/views/pages/about.html.slim
+++ b/app/views/pages/about.html.slim
@@ -66,22 +66,22 @@
 
           ul.vacancies-list
             li
-              a
+              a.vacancies-btn
                 p.position ІНЖЕНЕР-БУДІВЕЛЬНИК, КОНСТРУКТОР, ПРОЕКТАНТ
                 p.salary від 6 500 грн
                 = inline_svg ('icons/ZRN-icons-arrow-right-v1.svg')
             li
-              a
+              a.vacancies-btn
                 p.position МЕНЕДЖЕР З ПРОДАЖУ
                 p.salary Зарплата по домовленості
                 = inline_svg ('icons/ZRN-icons-arrow-right-v1.svg')
             li
-              a
+              a.vacancies-btn
                 p.position Грузчик-комплектовщик
                 p.salary від 12 000 грн
                 = inline_svg ('icons/ZRN-icons-arrow-right-v1.svg')
             li
-              a
+              a.vacancies-btn
                 p.position Технічний спеціаліст відділу збуту
                 p.salary від 6 000 грн
                 = inline_svg ('icons/ZRN-icons-arrow-right-v1.svg')
