--- a/app/views/application/_vacancie_popup.html.slim
+++ b/app/views/application/_vacancie_popup.html.slim
@@ -42,7 +42,8 @@
 
             .attach-file
               label.btn.attach-file-btn for="vacancy_request__attachment"
-                | + Прикріпити резюме
+                = inline_svg ("icons/ZRN-icons-add-v1.svg")
+                | Прикріпити резюме
                 input#vacancy_request__attachment type="file" name="vacancy_request[attachment]"
               .added-file-field
               .remove-file = inline_svg "icons/ZRN-icons-close-v1.svg"
