--- a/app/views/application/_calculate_popup.html.slim
+++ b/app/views/application/_calculate_popup.html.slim
@@ -19,14 +19,14 @@
             p.static-label = t("calculator.static_label_1")
             .row
               .columns.medium-6
-                input#zvarna type="radio" name="grilltype"
+                input#zvarna type="radio" name="grilltype" value="1"
                 label for="zvarna"
                   .radio-label
                     .icon
                       = inline_svg ('icons/radio-zvarna.svg')
                     p Зварна
               .columns.medium-6
-                input#presovana type="radio" name="grilltype"
+                input#presovana type="radio" name="grilltype" value="2"
                 label for="presovana"
                   .radio-label
                     .icon
@@ -35,42 +35,42 @@
             p.static-label = t("calculator.static_label_2")
             .row
               .columns.medium-6
-                select
+                select name="wall_thickness"
                   option value="all" = t("calculator.input_label_1")
+                  option value="0.5" 0.5
+                  option value="0.7" 0.7
                   option value="1" 1
-                  option value="2" 2
-                  option value="3" 3
-                  option value="4" 4
+                  option value="1.2" 1.2
               .columns.medium-6
-                select
+                select name="wall_height"
                   option value="all" = t("calculator.input_label_2")
-                  option value="1" 2017
-                  option value="2" 2016
-                  option value="3" 2015
-                  option value="4" 2014
+                  option value="1.5" 1.5
+                  option value="1.7" 1.7
+                  option value="2" 2
+                  option value="2.2" 2.2
               .columns.medium-6
-                select
+                select name="step_strip"
                   option value="all" = t("calculator.input_label_3")
-                  option value="1" 2017
-                  option value="2" 2016
-                  option value="3" 2015
-                  option value="4" 2014
+                  option value="0.2" 0.2
+                  option value="0.4" 0.4
+                  option value="0.6" 0.6
+                  option value="0.8" 0.8
               .columns.medium-6
-                select
+                select name="step_rod"
                   option value="all" = t("calculator.input_label_4")
-                  option value="1" 2017
-                  option value="2" 2016
-                  option value="3" 2015
-                  option value="4" 2014
+                  option value="0.3" 0.3
+                  option value="0.5" 0.5
+                  option value="0.7" 0.7
+                  option value="0.9" 0.9
               .columns.medium-6
-                select
+                select name="anti_corrosion"
                   option value="all" = t("calculator.input_label_5")
-                  option value="1" 2017
-                  option value="2" 2016
-                  option value="3" 2015
-                  option value="4" 2014
+                  option value="1" Слабкий
+                  option value="2" Середній
+                  option value="3" Сильний
+                  option value="4" Надміцний
               .columns.medium-6
-                .btn.dark = t("calculator.calculate")
+                .btn.dark.calculate_btn = t("calculator.calculate")
 
           .result-container
             p.larger Результат обрахунку
@@ -79,20 +79,24 @@
                 td
                   p = t("result.result_field_1")
                 td
-                  p 1
+                  p.result-1 1
               tr
                 td = t("result.result_field_2")
-                td 2
+                td
+                  p.result-2 2 
               tr
                 td = t("result.result_field_3")
-                td 3
+                td
+                  p.result-3 3
               tr
                 td = t("result.result_field_4")
-                td 4 
+                td
+                  p.result-4 4 
               tr
                 td = t("result.result_field_5")
-                td 5
-            p.small
+                td
+                  p.result-5 5
+            p.small.reset_calculator
               span = inline_svg ('icons/reset_form.svg')
               | Очистити поля
 
