calculator in progress

--- a/app/assets/stylesheets/structure-parts.sass
+++ b/app/assets/stylesheets/structure-parts.sass
@@ -82,6 +82,11 @@
   +transition(.25s)
   &:hover
     border: 2px solid white
+  &.transparent
+    &:hover
+      border: 2px solid $green
+      background: $green
+      color: white
   &.contact-btn
     color: $dark
     border: 2px solid $dark
