--- a/app/views/application/_main_banner.html.slim
+++ b/app/views/application/_main_banner.html.slim
@@ -17,5 +17,5 @@
 
         p.regular = t("mainpage.banner.intro")
         p.bold = t("mainpage.banner.slogan")
-        a.btn title=I18n.t("mainpage.banner.btn_html_title") href=about_path
+        a.btn.transparent title=I18n.t("mainpage.banner.btn_html_title") href=about_path
           = t("mainpage.banner.btn_title")
