--- a/app/assets/stylesheets/page-components/popup.sass
+++ b/app/assets/stylesheets/page-components/popup.sass
@@ -84,6 +84,15 @@
     letter-spacing: 4px
     svg
       margin-left: 20px
+  .calc-error-message
+    position: absolute
+    width: 100%
+    text-align: center
+    color: red
+    bottom: 20px
+    display: none
+    &.visible
+      display: block
   .inner-padding
     padding: 40px
     @media #{$small-only}
@@ -129,6 +138,8 @@
     position: relative
     border: 2px solid $blueGrey200
     margin-bottom: 20px
+    &.error
+      border: 2px solid red
     .icon
       position: absolute
       width: 64px
@@ -152,6 +163,8 @@
     margin-bottom: 30px
     height: 64px
     line-height: 64px
+    &.error
+      border: 1px solid red
 
   .btn
     display: block
@@ -161,6 +174,9 @@
     position: relative
     background: $dark
     padding: 40px
+    display: none
+    &.visible
+      display: block
     @media #{$small-only}
       padding: 40px 20px
     .larger, .small
