--- a/app/views/application/_header.html.slim
+++ b/app/views/application/_header.html.slim
@@ -28,7 +28,7 @@ nav.topnav
           a href=resh_nastyl_path title=I18n.t("header.nav.resh_nastyl_html_title") = t("header.nav.resh_nastyl_title")
           ul
             li
-              a href=resh_nastyl_one_path Зварний решітковий настил
+              a href=resh_nastyl_one_path = t("categories.category_1")
               ul
                 li 
                   a href=examples_path
@@ -37,7 +37,7 @@ nav.topnav
                     p = t("header.category.examples_of_use")
                     = inline_svg ('icons/ZRN-icons-arrow-right-v1.svg')
             li
-              a Пресований решітковий настил
+              a = t("categories.category_2")
               ul
                 li 
                   a href=examples_path
@@ -46,7 +46,7 @@ nav.topnav
                     p = t("header.category.examples_of_use")
                     = inline_svg ('icons/ZRN-icons-arrow-right-v1.svg')
             li
-              a Сходи
+              a = t("categories.category_3")
               ul
                 li 
                   a href=examples_path
@@ -55,7 +55,7 @@ nav.topnav
                     p = t("header.category.examples_of_use")
                     = inline_svg ('icons/ZRN-icons-arrow-right-v1.svg')
             li
-              a Кріплення
+              a = t("categories.category_4")
               ul
                 li 
                   a href=examples_path
@@ -64,7 +64,7 @@ nav.topnav
                     p = t("header.category.examples_of_use")
                     = inline_svg ('icons/ZRN-icons-arrow-right-v1.svg')
             li
-              a Просічно-витяжний лист
+              a = t("categories.category_5")
               ul
                 li 
                   a href=examples_path
@@ -73,7 +73,7 @@ nav.topnav
                     p = t("header.category.examples_of_use")
                     = inline_svg ('icons/ZRN-icons-arrow-right-v1.svg')
             li 
-              a Розробка КМФ
+              a = t("categories.category_6")
               ul
                 li 
                   a href=examples_path
@@ -82,7 +82,7 @@ nav.topnav
                     p = t("header.category.examples_of_use")
                     = inline_svg ('icons/ZRN-icons-arrow-right-v1.svg')
             li
-              a Решітковий настил “Serrated”
+              a = t("categories.category_7")
               ul
                 li 
                   a href=examples_path
