--- a/app/views/pages/resh_nastyl.html.slim
+++ b/app/views/pages/resh_nastyl.html.slim
@@ -24,19 +24,19 @@
         h2 = t("products.resh_nastyl_types")
       ol.resh-nastyl-list
         li
-          a зварний решітковий настил
+          a href=resh_nastyl_one_path = t("categories.category_1")
         li
-          a пресований решітковий настил
+          a href=resh_nastyl_one_path = t("categories.category_2")
         li
-          a Сходи
+          a href=shodovi_marshi_path = t("categories.category_3")
         li
-          a Кріплення
+          a href=shodovi_marshi_path = t("categories.category_4")
         li
-          a Просічно витяжний лист
+          a href=shodovi_marshi_path = t("categories.category_5")
         li
-          a Розробка КМД
+          a href=shodovi_marshi_path = t("categories.category_6")
         li
-          a Решітковий настил “serrated”
+          a href=resh_nastyl_one_path = t("categories.category_7")
 
 
 .remark-wrap
