--- a/app/views/pages/technical_guide.html.slim
+++ b/app/views/pages/technical_guide.html.slim
@@ -18,34 +18,34 @@
       ol.technical-quide-list
         li
           a href=technical_loading_table_path
-            | Таблиця навантажень зварного настилу
+            = t("technical-quide-list.name_1")
         li
           a href=technical_loading_table_path
-            | Таблиця навантажень пресованого настилу
+            = t("technical-quide-list.name_2")
         li
           a href=technical_guide_one_path
-            | Способи укладки решіток
+            = t("technical-quide-list.name_3")
         li
           a href=technical_guide_one_path
-            | Типи обрамлення
+            = t("technical-quide-list.name_4")
         li
           a href=technical_guide_one_path
-            | Способи кріплення настилу
+            = t("technical-quide-list.name_5")
         li
           a href=technical_guide_one_path
-            | Таблиця ваги решіткового настилу
+            = t("technical-quide-list.name_6")
         li
           a href=technical_guide_one_path
-            | допуски та відхилення
+            = t("technical-quide-list.name_7")
         li
           a href=technical_guide_one_path
-            | параметри сходинок
+            = t("technical-quide-list.name_8")
         li
           a href=technical_guide_one_path
-            | Приклади розкладки настилу
+            = t("technical-quide-list.name_9")
         li
           a href=technical_guide_one_path
-            | решітки з зубами протиковазання
+            = t("technical-quide-list.name_10")
 
     .columns.medium-3.large-2
       p.files-to-download = t("components.files_to_download")
