--- a/app/assets/stylesheets/main.sass
+++ b/app/assets/stylesheets/main.sass
@@ -297,16 +297,40 @@
       +fullsize
     ul.news-list
       li
-        padding: 20px 30px 30px
+        padding: 0
         border-bottom: 1px solid $blueGrey100
+        a
+          position: relative
+          padding: 20px 30px 30px
+          &:after
+            content: ''
+            background: url(#{asset_path('icons/media-hover.svg')})
+            position: absolute
+            bottom: 10px
+            right: 20px
+            width: 20px
+            height: 20px
+            background-position: center
+            background-repeat: no-repeat
+            opacity: 0
+            +translate(-100%,0)
+            +transition(.5s)
+          &:hover
+            &:after
+              opacity: 1
+              +translate(0,0)
+            .title
+              color: $green
         @media #{$xxlarge-up}
-          padding: 30px 40px 40px
+          a 
+            padding: 30px 40px 40px
         @media #{$medium-up}
           &:nth-child(n+4)
             display: none
       .title
         max-height: calc(24px * 1.2 * 2)
         overflow: hidden
+        +transition(.25s)
         @media #{$small-only}
           max-height: calc(21px * 1.2 * 2)
   .title
