--- a/app/views/pages/installation.html.slim
+++ b/app/views/pages/installation.html.slim
@@ -18,14 +18,14 @@
 .installation-collage-wrap
   .row
     .columns
-      .clearfix#animated-thumbnails
-        .floated.square style="background-image: url(#{asset_path('photo/example-1.jpg')})"
+      .clearfix.animated_thumbnails
+        .floated.square.lg_object style="background-image: url(#{asset_path('photo/example-1.jpg')})"
           a href=asset_path('photo/example-1.jpg')
             img src=asset_path('photo/example-1.jpg')
-        .floated.square style="background-image: url(#{asset_path('photo/example-2.jpg')})"
+        .floated.square.lg_object style="background-image: url(#{asset_path('photo/example-2.jpg')})"
           a href=asset_path('photo/example-2.jpg')
             img src=asset_path('photo/example-2.jpg')
-        .floated.square style="background-image: url(#{asset_path('photo/example-3.jpg')})"
+        .floated.square.lg_object style="background-image: url(#{asset_path('photo/example-3.jpg')})"
           a href=asset_path('photo/example-3.jpg')
             img src=asset_path('photo/example-3.jpg')
 
