--- a/app/views/pages/resh_nastyl_one.html.slim
+++ b/app/views/pages/resh_nastyl_one.html.slim
@@ -8,7 +8,7 @@
   .bottom-holder
     .row
       .columns
-        .btn.green = t("components.loading_table_btn")
+        a.btn.green href=asset_path('photo/table.png') download="" = t("components.loading_table_btn")
 
 .one-wrap
 
