--- a/app/views/pages/technical_guide_one.html.slim
+++ b/app/views/pages/technical_guide_one.html.slim
@@ -7,81 +7,88 @@
     p.banner-title Решітки з зубами протиковзання
 
 .one-wrap.article-content
-  .row
-    .columns.large-8
 
-      h2 Рекомендации по выбору решетчатого настила с зубьями противоскольжения
-      p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel ipsum blanditiis itaque soluta laboriosam cum, sint sapiente eos est reprehenderit omnis enim nemo atque, nihil officiis, voluptatem ad libero illo.
+  .constructor-part.1-element
+    .row
+      .columns.large-8
 
-    .columns.large-6
-      h2 Пример испытаний на противоскольжение согласно DIN 51130
-      img src=asset_path('photo/scheme-1.jpg')
+        h2 Рекомендации по выбору решетчатого настила с зубьями противоскольжения
+        p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel ipsum blanditiis itaque soluta laboriosam cum, sint sapiente eos est reprehenderit omnis enim nemo atque, nihil officiis, voluptatem ad libero illo.
 
-    .columns.large-5.large-push-1
-      h2 Пример испытаний на противоскольжение согласно DIN 51130
-      table
-        tr
-          th Градус кута монтування настилу
-          th Відповідний клас протискользіння
-        tr
-          td 6-10
-          td r9
-        tr
-          td 10-19
-          td r10
-        tr
-          td 19-27
-          td r11
-        tr
-          td 27-35
-          td r12
-        tr
-          td > 35
-          td r13
+  .constructor-part.2-element
+    .row
+      .columns.large-6
+        h2 Пример испытаний на противоскольжение согласно DIN 51130
+        img src=asset_path('photo/scheme-1.jpg')
 
-    .columns.large-8
-      h2 Cоответствие типов противоскольжения классу противоскольжения согласно BGR181
-    .columns
-      table
+      .columns.large-5
+        h2 Пример испытаний на противоскольжение согласно DIN 51130
+        table
+          tr
+            th Градус кута монтування настилу
+            th Відповідний клас протискользіння
+          tr
+            td 6-10
+            td r9
+          tr
+            td 10-19
+            td r10
+          tr
+            td 19-27
+            td r11
+          tr
+            td 27-35
+            td r12
+          tr
+            td > 35
+            td r13
 
-        tr
-          th rowspan="2" Градус кута монтування настилу
-          th colspan="2" Тип решетки
-          th rowspan="2" Градус кута монтування настилу
-        tr
-          th Зварна
-          th Пресована
+  .constructor-part.1-element
+    .row
+      .columns.large-8
+        h2 Cоответствие типов противоскольжения классу противоскольжения согласно BGR181
+      .columns
+        .table-holder
+          table
 
-        tr
-          td r9
-          td без зубів
-          td без зубів
-          td
-        tr
-          td r10
-          td без зубів
-          td s5, s6
-          td
-        tr
-          td r11
-          td s5, s6
-          td s4
-          td
-        tr
-          td r12
-          td s4
-          td s5, s6*
-          td * зубья наносятся как на несущую  так и на поперечную полосы
-        tr
-          td r13
-          td -------
-          td s4*
-          td * зубья наносятся как на несущую  так и на поперечную полосы
-    .columns.large-8.end
-      i
-        | * Для сварного настила принята ячейка 34*38, для прессованного – 33*33
-      i
-        | ** По технологическим причинам не все размеры ячеек и несущих полос можно изготовить со всеми вариантами защиты от скольжения. Наши технические специалисты проконсуль тируют Вас при заказе.
+            tr
+              th rowspan="2" Градус кута монтування настилу
+              th colspan="2" Тип решетки
+              th rowspan="2" Градус кута монтування настилу
+            tr
+              th Зварна
+              th Пресована
+
+            tr
+              td r9
+              td без зубів
+              td без зубів
+              td
+            tr
+              td r10
+              td без зубів
+              td s5, s6
+              td
+            tr
+              td r11
+              td s5, s6
+              td s4
+              td
+            tr
+              td r12
+              td s4
+              td s5, s6*
+              td * зубья наносятся как на несущую  так и на поперечную полосы
+            tr
+              td r13
+              td -------
+              td s4*
+              td * зубья наносятся как на несущую  так и на поперечную полосы
+      .columns.large-8.end
+        i
+          | * Для сварного настила принята ячейка 34*38, для прессованного – 33*33
+        i
+          | ** По технологическим причинам не все размеры ячеек и несущих полос можно изготовить со всеми вариантами защиты от скольжения. Наши технические специалисты проконсуль тируют Вас при заказе.
 
 .remark-wrap
   .row
