--- a/app/assets/stylesheets/page-components/table.sass
+++ b/app/assets/stylesheets/page-components/table.sass
@@ -1,17 +1,18 @@
 table
   width: 100%
-  tr
+  margin-bottom: 20px
+  td,th
+    padding: 10px
+    text-align: center
+    min-width: 150px
   th
     background: $dark
     color: $green
     font-weight: 700
+    border: 1px solid $blueGrey700
   td
     color: $blueGrey700
-  td,th
-    padding: 10px
-    text-align: center
     border: 1px solid $blueGrey200
-    min-width: 150px
   p
     margin-bottom: 0
   img
