--- a/app/views/pages/examples.html.slim
+++ b/app/views/pages/examples.html.slim
@@ -22,11 +22,16 @@
           li.tag data-tag-id="4" пандуси
 
   .examples-wrap
+
     .row.columns-left
+
       .columns.medium-4
-        a.example-block.tag-related-block data-tag-ids="1"
-          .img
-            .img-bg style="background-image: url('http://lorempixel.com/1600/960/')"
+        
+        .example-block.tag-related-block.animated_thumbnails data-tag-ids="1"
+
+          .img.lg_object
+            a.img-bg style="background-image: url(#{asset_path('photo/example-1.jpg')})" href=asset_path('photo/example-1.jpg')
+              img src=asset_path('photo/example-1.jpg')
             .hover-img
               = inline_svg ('icons/eye.svg')
             .category промисловість
@@ -34,83 +39,17 @@
           p.small
             span 19
             | фотографій
-      .columns.medium-4
-        a.example-block.tag-related-block data-tag-ids="2"
-          .img
-            .img-bg style="background-image: url('http://lorempixel.com/1600/960/')"
+
+          .img.lg_object
+            a.img-bg style="background-image: url(#{asset_path('photo/example-2.jpg')})" href=asset_path('photo/example-2.jpg')
+              img src=asset_path('photo/example-2.jpg')
             .hover-img
               = inline_svg ('icons/eye.svg')
-            .category фасади
-          p.name Металеві решітки
-          p.small
-            span 19
-            | фотографій
-      .columns.medium-4
-        a.example-block.tag-related-block data-tag-ids="4"
-          .img
-            .img-bg style="background-image: url('http://lorempixel.com/1600/960/')"
+          .img.lg_object
+            a.img-bg style="background-image: url(#{asset_path('photo/example-3.jpg')})" href=asset_path('photo/example-3.jpg')
+              img src=asset_path('photo/example-3.jpg')
             .hover-img
               = inline_svg ('icons/eye.svg')
-            .category сходові марші 
-          p.name Металеві решітки
-          p.small
-            span 19
-            | фотографій
-      .columns.medium-4
-        a.example-block.tag-related-block data-tag-ids="3,2"
-          .img
-            .img-bg style="background-image: url('http://lorempixel.com/1600/960/')"
-            .hover-img
-              = inline_svg ('icons/eye.svg')
-            .category промисловість
-          p.name Металеві решітки
-          p.small
-            span 19
-            | фотографій
-      .columns.medium-4
-        a.example-block.tag-related-block data-tag-ids="1,2"
-          .img
-            .img-bg style="background-image: url('http://lorempixel.com/1600/960/')"
-            .hover-img
-              = inline_svg ('icons/eye.svg')
-            .category фасади
-          p.name Металеві решітки
-          p.small
-            span 19
-            | фотографій
-      .columns.medium-4
-        a.example-block.tag-related-block data-tag-ids="1,2,4"
-          .img
-            .img-bg style="background-image: url('http://lorempixel.com/1600/960/')"
-            .hover-img
-              = inline_svg ('icons/eye.svg')
-            .category сходові марші 
-          p.name Металеві решітки
-          p.small
-            span 19
-            | фотографій
-      .columns.medium-4
-        a.example-block.tag-related-block data-tag-ids="2"
-          .img
-            .img-bg style="background-image: url('http://lorempixel.com/1600/960/')"
-            .hover-img
-              = inline_svg ('icons/eye.svg')
-            .category фасади
-          p.name Металеві решітки
-          p.small
-            span 19
-            | фотографій
-      .columns.medium-4
-        a.example-block.tag-related-block data-tag-ids="3"
-          .img
-            .img-bg style="background-image: url('http://lorempixel.com/1600/960/')"
-            .hover-img
-              = inline_svg ('icons/eye.svg')
-            .category сходові марші 
-          p.name Металеві решітки
-          p.small
-            span 19
-            | фотографій
 
   .btn-holder
     .show-more-btn = t("components.download_more_btn")
