--- a/app/views/pages/technical_loading_table.html.slim
+++ b/app/views/pages/technical_loading_table.html.slim
@@ -7,91 +7,108 @@
     p.banner-title Таблиця навантажень зварного настилу
 
 .one-wrap.article-content
-  .row
-    .columns.large-8
 
-      h2 Пояснения к таблице нагрузок сварного решетчатого настила
-      p Все данные в таблицах нагрузок рассчитаны для стали S 235 либо ее аналогов (St 37-2, Ст3сп по ГОСТ).
+  .constructor-part.1-element
+    .row
+      .columns.medium-8.large-8
+        h2 Таблиця навантажень для зварних решіток з кроком несучих полос t = 34,3
+        p Все данные в таблицах нагрузок рассчитаны для стали S 235 либо ее аналогов (St 37-2, Ст3сп по ГОСТ).
+      .columns.medium-4.large-4
+        .donwload-pdf-holder
+          a.donwload-pdf-btn href=asset_path('photo/table.png') download=""
+            = inline_svg ('icons/ZRN-icons-download-v1-black.svg')
+            p.name = t("components.download_pdf_btn")
+            p.size 3.4mb
+      .columns
+        .table-holder-with-scroll.dragscroll
+          img src=asset_path('photo/table.png')
 
-      table
-        tr
-          th Для комірки t x q
-          td 34.3 x 38.1
-          td значення з таблиці
-          td rowspan="2"
-            img src=asset_path('photo/scheme-1.jpg')
-        tr
-          th Для комірки t x q
-          td
-            p 34.3 x 38.1
-            p 33.4 x 31.5
-            p 12.3 x 43.2
-          td применяется  коэффициент 0,95 от значений в таблице
+  .constructor-part.1-element
+    .row
+      .columns.large-8
+        h2 Пояснения к таблице нагрузок сварного решетчатого настила
+        p Все данные в таблицах нагрузок рассчитаны для стали S 235 либо ее аналогов (St 37-2, Ст3сп по ГОСТ).
+        .table-holder
+          table
+            tr
+              th Для комірки t x q
+              td 34.3 x 38.1
+              td значення з таблиці
+              td rowspan="2"
+                img src=asset_path('photo/scheme-1.jpg')
+            tr
+              th Для комірки t x q
+              td
+                p 34.3 x 38.1
+                p 33.4 x 31.5
+                p 12.3 x 43.2
+              td применяется  коэффициент 0,95 от значений в таблице
   
-  .row
-    .columns.medium-6.large-3
-      .small-scheme-block
-        img src=asset_path('photo/scheme-1.jpg')
-        p
-          span Fv
-          | распределенная нагрузка в кг/м2
-    .columns.medium-6.large-3
-      .small-scheme-block
-        img src=asset_path('photo/scheme-1.jpg')
-        p
-          span Fv
-          | распределенная нагрузка в кг/м2
-    .columns.medium-6.large-3
-      .small-scheme-block
-        img src=asset_path('photo/scheme-1.jpg')
-        p
-          span Fv
-          | распределенная нагрузка в кг/м2
-    .columns.medium-6.large-3
-      .small-scheme-block
-        img src=asset_path('photo/scheme-1.jpg')
-        p
-          span Fv
-          | распределенная нагрузка в кг/м2
+  .constructor-part.4-element
+    .row
+      .columns.medium-6.large-3
+        .small-scheme-block
+          img src=asset_path('photo/scheme-1.jpg')
+          p
+            span Fv
+            | распределенная нагрузка в кг/м2
+      .columns.medium-6.large-3
+        .small-scheme-block
+          img src=asset_path('photo/scheme-1.jpg')
+          p
+            span Fv
+            | распределенная нагрузка в кг/м2
+      .columns.medium-6.large-3
+        .small-scheme-block
+          img src=asset_path('photo/scheme-1.jpg')
+          p
+            span Fv
+            | распределенная нагрузка в кг/м2
+      .columns.medium-6.large-3
+        .small-scheme-block
+          img src=asset_path('photo/scheme-1.jpg')
+          p
+            span Fv
+            | распределенная нагрузка в кг/м2
 
-
-  .row
-    .columns.medium-5
-      p Для решетчатых настилов с зубьями противоскольжения применяются следующие понижающие коэффициенты:
-  .row
-    .columns.medium-5.large-6
-      table
-        tr
-          th Градус кута монтування настилу
-          th Відповідний клас протискользіння
-        tr
-          td 6-10
-          td r9
-        tr
-          td 10-19
-          td r10
-        tr
-          td 19-27
-          td r11
-        tr
-          td 27-35
-          td r12
-        tr
-          td > 35
-          td r13
-    .columns.medium-7.large-6
-      i
-        | Допустимое напряжение стали на сжатие и растяжение &mdash; 
-        span 1600
-        | кг/см
-      i
-        | Коэффициент безопасности до предела пластичности &mdash; 
-        span 1.5
-      i
-        | Коэффициент безопасности до предела прочности на разрыв &mdash; 
-        span 2.35
-      i
-        | Опора решетки должна быть равной высоте несущей полосы, но в любом случае не меньше 30 мм.
+  .constructor-part.2-element
+    .row
+      .columns.medium-5
+        p Для решетчатых настилов с зубьями противоскольжения применяются следующие понижающие коэффициенты:
+    .row
+      .columns.medium-5.large-6
+        table
+          tr
+            th Градус кута монтування настилу
+            th Відповідний клас протискользіння
+          tr
+            td 6-10
+            td r9
+          tr
+            td 10-19
+            td r10
+          tr
+            td 19-27
+            td r11
+          tr
+            td 27-35
+            td r12
+          tr
+            td > 35
+            td r13
+      .columns.medium-7.large-6
+        i
+          | Допустимое напряжение стали на сжатие и растяжение &mdash; 
+          span 1600
+          | кг/см
+        i
+          | Коэффициент безопасности до предела пластичности &mdash; 
+          span 1.5
+        i
+          | Коэффициент безопасности до предела прочности на разрыв &mdash; 
+          span 2.35
+        i
+          | Опора решетки должна быть равной высоте несущей полосы, но в любом случае не меньше 30 мм.
 
 
 
