--- a/app/views/application/_calculate_popup.html.slim
+++ b/app/views/application/_calculate_popup.html.slim
@@ -73,6 +73,20 @@
                   option value="3" 3
                   option value="4" 4
               .columns.medium-6
+                select name="step_rod"
+                  option value="all" = t("calculator.input_label_6")
+                  option value="0.3" 0.3
+                  option value="0.5" 0.5
+                  option value="0.7" 0.7
+                  option value="0.9" 0.9
+              .columns.medium-6
+                select name="anti_corrosion"
+                  option value="all" = t("calculator.input_label_7")
+                  option value="1" 1
+                  option value="2" 2
+                  option value="3" 3
+                  option value="4" 4
+              .columns.medium-6
                 a.btn.dark.calculate_btn href="#result" = t("calculator.calculate")
 
           .result-container#result
