--- a/app/assets/stylesheets/page-components/popup.sass
+++ b/app/assets/stylesheets/page-components/popup.sass
@@ -120,6 +120,33 @@
     font-size: 18px
     font-weight: 700
     margin: 40px 0 20px
+  .field-label
+    color: $blueGrey600
+    margin-bottom: 10px
+  .input-field
+    position: relative
+    &:after
+      content: 'MM'
+      position: absolute
+      right: 20px
+      top: 24px
+      color: $green
+      font-size: 12px
+  input
+    position: relative
+    width: 100%
+    margin-bottom: 30px
+    height: 64px
+    line-height: 64px
+    padding: 0 20px
+    color: $blueGrey300
+    border: none
+    outline: none
+    font-weight: 700
+    text-transform: uppercase
+    +placeholder($blueGrey300)
+    &.error
+      border: 1px solid red
   input[type="radio"]
     display: none
     & + label
@@ -134,6 +161,10 @@
           fill: $dark
         p
           color: $green
+  input[type="number"]
+    -moz-appearance: textfield
+    &::-webkit-outer-spin-button, &::-webkit-inner-spin-button
+      -webkit-appearance: none
   .radio-label
     position: relative
     border: 2px solid $blueGrey200
@@ -169,6 +200,7 @@
   .btn
     display: block
     text-align: center
+    margin-top: 30px
 
   .result-container
     position: relative
@@ -224,6 +256,8 @@
       color: black
       font-weight: 700
       letter-spacing: 2px
+      &:hover
+        color: $green
 
 .vacancie-popup
   .vacancie-title
