--- a/app/views/application/_calculate_popup.html.slim
+++ b/app/views/application/_calculate_popup.html.slim
@@ -5,7 +5,7 @@
   .inner-holder
 
     .row
-      .columns.medium-9.medium-centered.large-7
+      .columns.large-7.large-centered
 
         .calculator-wrap
           
@@ -38,54 +38,54 @@
             p.static-label = t("calculator.static_label_2")
             .row
               .columns.medium-6
-                select name="wall_thickness"
-                  option value="all" = t("calculator.input_label_1")
-                  option value="0.5" 0.5
-                  option value="0.7" 0.7
-                  option value="1" 1
-                  option value="1.2" 1.2
-              .columns.medium-6
-                select name="wall_height"
-                  option value="all" = t("calculator.input_label_2")
-                  option value="1.5" 1.5
-                  option value="1.7" 1.7
+                p.field-label = t("calculator.input_label_1")
+                select name="thickness_of_strip"
+                  option value="all" = t("calculator.field_label_1")
                   option value="2" 2
-                  option value="2.2" 2.2
+                  option value="3" 3
+                  option value="4" 4
+                  option value="5" 5
               .columns.medium-6
+                p.field-label = t("calculator.input_label_2")
+                select name="height_of_strip"
+                  option value="all" = t("calculator.field_label_1")
+                  option value="20" 20
+                  option value="25" 25
+                  option value="30" 30
+                  option value="40" 40
+                  option value="50" 50
+                  option value="60" 60
+                  option value="70" 70
+              .columns.medium-6
+                p.field-label = t("calculator.input_label_3")
                 select name="step_strip"
-                  option value="all" = t("calculator.input_label_3")
-                  option value="0.2" 0.2
-                  option value="0.4" 0.4
-                  option value="0.6" 0.6
-                  option value="0.8" 0.8
+                  option value="all" = t("calculator.field_label_1")
+                  option value="25" 25
+                  option value="34" 34
+                  option value="50" 50
+                  option value="68" 68
               .columns.medium-6
+                p.field-label = t("calculator.input_label_4")
                 select name="step_rod"
-                  option value="all" = t("calculator.input_label_4")
-                  option value="0.3" 0.3
-                  option value="0.5" 0.5
-                  option value="0.7" 0.7
-                  option value="0.9" 0.9
+                  option value="all" = t("calculator.field_label_1")
+                  option value="38" 38
+                  option value="50" 50
+                  option value="76" 76
+                  option value="101" 101
               .columns.medium-6
-                select name="anti_corrosion"
-                  option value="all" = t("calculator.input_label_5")
-                  option value="1" 1
-                  option value="2" 2
-                  option value="3" 3
-                  option value="4" 4
+                p.field-label = t("calculator.input_label_5")
+                .input-field
+                  input name="grill_width" type="number" placeholder=I18n.t("calculator.field_label_2")
               .columns.medium-6
-                select name="step_rod"
-                  option value="all" = t("calculator.input_label_6")
-                  option value="0.3" 0.3
-                  option value="0.5" 0.5
-                  option value="0.7" 0.7
-                  option value="0.9" 0.9
+                p.field-label = t("calculator.input_label_6")
+                .input-field
+                  input name="grill_height" type="number" placeholder=I18n.t("calculator.field_label_3")
               .columns.medium-6
-                select name="anti_corrosion"
-                  option value="all" = t("calculator.input_label_7")
-                  option value="1" 1
-                  option value="2" 2
-                  option value="3" 3
-                  option value="4" 4
+                p.field-label = t("calculator.input_label_7")
+                select name="corrosion_resistance"
+                  option value="all" = t("calculator.field_label_4")
+                  option value="1" Без покриття
+                  option value="2" Гаряче цинкування
               .columns.medium-6
                 a.btn.dark.calculate_btn href="#result" = t("calculator.calculate")
 
@@ -120,4 +120,4 @@
         .details-info
           p
             = t("additional_details")
-            a +380 (22) 35-44-64
+            a href="tel:+380322354464" +380 (322) 35-44-64
